crates/test-ui/ui/ns_string_output_not_const.stderr
error[E0015]: cannot call non-const fn `CachedId::<NSString>::get::<[closure@$WORKSPACE/crates/icrate/src/generated/Foundation/../../additions/Foundation/macros/ns_string.rs:195:29: 195:31]>` in statics
 --> ui/ns_string_output_not_const.rs
  |
  |     static STRING: &NSString = ns_string!("abc");
  |                                ^^^^^^^^^^^^^^^^^
  |
  = note: calls in statics are limited to constant functions, tuple structs and tuple variants
  = note: consider wrapping this expression in `Lazy::new(|| ...)` from the `once_cell` crate: https://crates.io/crates/once_cell
  = note: this error originates in the macro `$crate::__ns_string_inner` which comes from the expansion of the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)
